# On-Farm-inputs-QA-App

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.py  INSTALL.md  PUBLISH.md  Procfile  README.md  READY_TO_DEPLOY.md  requirements.txt
apps/: __init__.py
apps/backend/: .env.example  README.md  __init__.py  __init__.py.bak  db_supabase.py  main.py  pyproject.toml
apps/backend/app/: __init__.py  __init__.py.bak  auth.py  config.py  db.py  db_supabase.py  main.py  models.py  pdf.py  schemas.py  utils.py
apps/backend/app/routers/: __init__.py  applications.py  applications.py.bak  farms.py  mixes.py  owners.py  paddocks.py  records.py  records.py.bak  weather.py
apps/backend/app/services/: ownership.py  serializers.py
apps/backend/app/templates/: application.html  application.html.bak
apps/backend/routes/: __init__.py  applications.py  farms.py  mixes.py  owners.py  paddocks.py  records.py  weather.py
apps/backend/services/: __init__.py  pdf.py
docs/: DesignBrief.md  RiskRegister.md
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppHeader.tsx
frontend/components/dashboard/: ApplicationComposer.tsx  FarmManager.tsx  MixBuilder.tsx  OwnerManager.tsx  PaddockManager.tsx  PdfActions.tsx  SectionCard.tsx  StatusBanner.tsx  WeatherSnapshotPanel.tsx
frontend/components/providers/: SupabaseProvider.tsx
frontend/lib/: api.ts  geolocation.ts  pdf.ts  storage.ts  types.ts  utils.ts
supabase/migrations/: 20251001044339_initial_schema.sql
(+3 files in other folders)
