[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spray-backend"
version = "0.1.0"
description = "FastAPI backend for the Infield Spray Record application"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "pydantic>=2.4",
  "pydantic-settings>=2.0",
  "httpx>=0.25",
  "PyJWT[crypto]>=2.8",
  "WeasyPrint>=60",
  "Jinja2>=3.1",
  "qrcode>=7.4"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app" = ["templates/*.html"]
